added swagger ui to gateway and other functionalities